--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@netlify/functions": "^1.3.0",
+    "@remix-run/netlify": "^1.9.0",
     "@portabletext/react": "^2.0.0",
     "@remix-run/node": "^1.9.0",
     "@remix-run/react": "^1.9.0",
